refactor: major refactor removing completablefutures from some places